fixes nested comment collapse bug

--- a/app/assets/stylesheets/photo_show.css.scss
+++ b/app/assets/stylesheets/photo_show.css.scss
@@ -131,7 +131,13 @@ div, section, img, p, h2{
 //	float: left;
 }
 
+.comment-buttons{
+	background: pink;
+//	height: 20px;
+}
+
 .article-content{
+	background: lightblue;
 //	float: left;
 }
 
